--- a/python/src/com/jetbrains/python/console/pythonCommandQueue/QueueElementPanel.form
+++ b/python/src/com/jetbrains/python/console/pythonCommandQueue/QueueElementPanel.form
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.jetbrains.python.console.pythonCommandQueue.QueueElementPanel">
-  <grid id="27dc6" binding="myRootPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="myRootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="277" height="28"/>
+      <xy x="20" y="20" width="277" height="94"/>
     </constraints>
     <properties>
-      <maximumSize width="247" height="28"/>
+      <maximumSize width="2147483647" height="2147483647"/>
+      <minimumSize width="-1" height="20"/>
+      <opaque value="true"/>
+      <preferredSize width="-1" height="20"/>
     </properties>
     <border type="none"/>
     <children>
+      <component id="efe28" class="com.intellij.ui.components.JBLabel" binding="myIcon">
+        <constraints border-constraint="West"/>
+        <properties/>
+      </component>
       <component id="7904f" class="com.intellij.ui.components.JBLabel" binding="myText">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="209" height="-1"/>
-            <preferred-size width="209" height="-1"/>
-          </grid>
-        </constraints>
+        <constraints border-constraint="Center"/>
         <properties>
+          <maximumSize width="-1" height="-1"/>
+          <minimumSize width="70" height="-1"/>
+          <preferredSize width="-1" height="-1"/>
           <text value=""/>
         </properties>
       </component>
-      <grid id="5e254" binding="myButtonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
+      <grid id="5e254" binding="myButtonPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints border-constraint="East"/>
+        <properties>
+          <alignmentY value="0.5"/>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
-      <component id="efe28" class="com.intellij.ui.components.JBLabel" binding="myIcon">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
     </children>
   </grid>
 </form>
